--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				
 				#chunk {
 					margin: 100px;
-					width: 85%;
+					width: 60%;
 					display: block;
 					background-color: white;
 					padding: 20px;
@@ -56,7 +56,7 @@
 		<div id="chunk">
 			<p>
 				literal/me<br>
-				<img src
+				<img style="height: 200px;" src="tumblr_olc29rzcid1rv6iido1_r2_400.gif">
 			</p>
 		</div>
 	</body>
